Test, changed some letters

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -36,7 +36,7 @@
 <body>
     <div class="title">
         <h1> Welcome! </h1>
-        <p> This is we have to choose a group name?'s Intelligent Web assignment. </p>
+        <p> This is "We Have To Choose A Group Name?"'s Intelligent Web assignment. </p>
         <p> This Web application will allow you to query the social web, such as twitter, to track discussions on football. </p> 
         <p> Please log in below to get started! </p>
     </div>
