Commit, app.js changed

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]> <html class="lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]> <html class="lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]> <html class="lt-ie9" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
+<html lang="en">
 <html class="home">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Home</title>
-    <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <link rel='stylesheet' type="text/css" href='/stylesheets/style.css' />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript">
@@ -37,7 +33,7 @@
     <div class="title">
         <h1> Welcome! </h1>
         <p> This is "We Have To Choose A Group Name?"'s Intelligent Web assignment. </p>
-        <p> This Web application will allow you to query the social web, such as twitter, to track discussions on football. </p> 
+        <p> This Web application will allow you to query the social web, such as twitter, to track discussions about football. </p> 
         <p> Please log in below to get started! </p>
     </div>
     <section class="container">
