--- a/app/public/index.html
+++ b/app/public/index.html
@@ -38,7 +38,7 @@
     </div>
     <section class="container">
     <div class="login">
-      <form method="post" action="queryInterface.html">
+      <form method="post" action="login">
         <p><input type="text" name="login" value="" placeholder="Username or Email"></p>
         <p><input type="password" name="password" value="" placeholder="Password"></p>
         <p class="remember_me">
