Commit, twitter.js now working with variables, changes made too app.js and index.html to incorperate the user,pass login

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -38,8 +38,8 @@
     </div>
     <section class="container">
     <div class="login">
-      <form method="post" action="login">
-        <p><input type="text" name="login" value="" placeholder="Username or Email"></p>
+      <form method="post" action="/login">
+        <p><input type="text" name="username" value="" placeholder="Username"></p>
         <p><input type="password" name="password" value="" placeholder="Password"></p>
         <p class="remember_me">
           <label>
@@ -51,7 +51,7 @@
       </form>
     </div>
     <div class="login-help">
-      <p>Forgot your password? <a href="index.html">Click here to reset it</a>.</p>
+      <p>Forgot your password? <a href="/">Click here to reset it</a>.</p>
     </div>
     </section>
 </body>
