--- a/app/public/queryInterface.html
+++ b/app/public/queryInterface.html
@@ -35,7 +35,29 @@
                 <h1>Twitter Form </h1>
                 <label>
                     <span>Twitter Profile :</span>
-                    <input id="profile" type="text" placeholder="Example: manutd" />
+                    <input id="profile" type="text" list="suggestions"placeholder="Example: manutd" />
+                    <datalist id="suggestions">
+                        <option value="Arsenal">
+                        <option value="AVFCOfficial">
+                        <option value="afcbournemouth">
+                        <option value="ChelseaFC">
+                        <option value="CPFC">
+                        <option value="Everton">
+                        <option value="LCFC">
+                        <option value="LFC">
+                        <option value="MCFC">
+                        <option value="ManUtd">
+                        <option value="NUFC">
+                        <option value="NorwichCityFC">
+                        <option value="SouthamptonFC">
+                        <option value="stokecity">
+                        <option value="SunderlandAFC">
+                        <option value="SwansOfficial">
+                        <option value="SpursOfficial">
+                        <option value="WBAFCofficial">
+                        <option value="whufc_official">
+                        <option value="WatfordFC">
+                    </datalist>
                 </label>
                 
                 <label>
@@ -45,7 +67,7 @@
                 
                 <label>
                     <span>Count :</span>
-                    <input id="count" type="text" placeholder="Example: 100" />
+                    <input id="count" type="number" placeholder="Example: 100" min="1" max="100"/>
                 </label> 
 
                 <label>
@@ -58,6 +80,7 @@
                     <input type="button" class="button" value="Send" /> 
                 </label>    
             </form>
+            <div id='myform_errorloc' class='error_strings'></div>
         <script>
             var Twit = require('twit');
             var client = new Twit({
