Commit, added more functionality to twitter.js, mainly team player accounts and a function to return those players most recent tweet, also changed some of the functionality in app.js and the html pages

--- a/app/public/404.html
+++ b/app/public/404.html
@@ -40,13 +40,11 @@
   <body>
   	<div class="title2">
 	    <h1> Looks like you've scored an own goal mate... Page not found. </h1>
+      <a href="index.html"> Would you like to return to the home page? </a>
 	</div>
 		<div class="fadeimage">
 			<img class="fadeOne image" src="/images/baker-own-goal.jpg" style="width:600px;height:400px;">
 		    <img class="fadeTwo image" src="/images/Oops.jpg" style="width:600px;height:400px;"/>
 		</div>
-	<div class="title2" style="position: relative; margin: auto;">
-	    <h1 href="/index.html"> Would you like to return to the home page? </h1>
-    </div>
   </body>
 </html>
