--- a/app/public/index.html
+++ b/app/public/index.html
@@ -32,7 +32,7 @@
 <body>
     <div class="title">
         <h1> Welcome! </h1>
-        <p> This is "We Have To Choose A Group Name?"'s Intelligent Web assignment. </p>
+        <p> This is "We Have To Choose A Group Name?" Intelligent Web assignment. </p>
         <p> This Web application will allow you to query the social web, such as twitter, to track discussions about football. </p> 
         <p> Please log in below to get started! </p>
     </div>
@@ -41,13 +41,13 @@
       <form method="post" action="/login">
         <p><input type="text" name="username" value="" placeholder="Username"></p>
         <p><input type="password" name="password" value="" placeholder="Password"></p>
+        <p class="submit"><input type="submit" name="commit" value="Login"></p>
         <p class="remember_me">
           <label>
             <input type="checkbox" name="remember_me" id="remember_me">
             Remember me on this computer
           </label>
         </p>
-        <p class="submit"><input type="submit" name="commit" value="Login"></p>
       </form>
     </div>
     <div class="login-help">
