Fixed setheader error

--- a/app/public/404.html
+++ b/app/public/404.html
@@ -40,7 +40,7 @@
   <body>
   	<div class="title2">
 	    <h1> Looks like you've scored an own goal mate... Page not found. </h1>
-      <a href="index.html"> Would you like to return to the home page? </a>
+      <a href="/"> Would you like to return to the home page? </a>
 	</div>
 		<div class="fadeimage">
 			<img class="fadeOne image" src="/images/baker-own-goal.jpg" style="width:600px;height:400px;">
