Commit, added maps.js and working on geocode for twitter.js

--- a/app/public/queryInterface.html
+++ b/app/public/queryInterface.html
@@ -34,7 +34,7 @@
         </div>
             <!-- Form for the user input for querying the social web -->
             <form action="" method="post" class="form"> 
-                <h1>Twitter Form </h1>
+                <h1>Twitter Form for </h1>
                 <label>
                     <span>Twitter Profile :</span>
                     <input id="profile" type="text" list="suggestions"placeholder="Example: MCFC" />
@@ -75,6 +75,11 @@
                 <label>
                     <span>Date :</span>
                     <input id="message" type="text" placeholder="Example: 2011-11-11" />
+                </label>
+
+                <label>
+                    <span>Distance :</span>
+                    <input id="message" type="text" placeholder="Example: 100km" />
                 </label>
 
                 <label>
