--- a/app/public/queryInterface.html
+++ b/app/public/queryInterface.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="home">
     <head>
         <link rel='stylesheet' type="text/css" href='/stylesheets/style.css' />
