--- a/app/public/queryInterface.html
+++ b/app/public/queryInterface.html
@@ -5,9 +5,10 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script type="text/javascript">
             //Array of background images
-            var images = new Array('/images/Etihad-Stadium.jpg', '/images/emirates-stadium.jpg', '/images/Wembley.jpg'),
+            var images = new Array('/images/Etihad-Stadium.jpg', '/images/emirates-stadium.jpg', '/images/Wembley.jpg', '/images/Toure.jpg', '/images/Ozil.jpg', '/images/Hazard.jpg', '/images/Aguero.jpg', '/images/Klopp.jpg', '/images/Rooney.jpg', '/images/Spurs.jpg', '/images/Vardy.jpg' ),
                 nextimage = 0;
-            doSlideshow();
+
+            //doSlideshow();
 
             //Function that handles the background images slideshow
             function doSlideshow(){
@@ -18,23 +19,106 @@
                     setTimeout(doSlideshow,20000);
                 });
             }
-
             function adjust_textarea(h) {
                 h.style.height = "20px";
                 h.style.height = (h.scrollHeight)+"px";
             }
+            (function($)
+            {
+                $.fn.extend({
+                    bgrotate: function(options)
+                    {
+                        var defaults = {
+                            delay: 10000,
+                            images: ['Etihad-Stadium.jpg', 'emirates-stadium.jpg', 'Wembley.jpg', 'Toure.jpg', 'Ozil.jpg', 'Hazard.jpg', 'Aguero.jpg', 'Klopp.jpg', 'Rooney.jpg', 'Spurs.jpg', 'Vardy.jpg'],
+                            imagedir: "/images/"
+                        }
+
+                        var o = $.extend(defaults, options);
+                        var $obj = $(this);
+                        var cache = [];
+                        var i = 0;
+                        var preCache = true;
+
+                        return this.each(function()
+                        {
+                            setTimeout(function() { setBack($obj, o.images, o.imagedir) }, o.delay);
+                        });
+
+                        function setBack(elem, backgrounds, imagedir)
+                        {
+                            //elem.css("background-image", "url(" + imagedir + backgrounds[i] + ")");
+                            var newElement = elem.clone();
+                            $(newElement).css({'background-image': "url(" + imagedir + backgrounds[i] + ")"})
+                            $(newElement).css("position","absolute");
+                            $(newElement).css("top",$(elem).position().top + "px");
+                            $(newElement).css("left",$(elem).position().left + "px");
+                            $(newElement).hide();
+                            $(elem).after(newElement);
+                            $(newElement).fadeIn('slow', function() {
+                                $(newElement).css("position",$(this).css("position"));
+                                $(newElement).css("top",$(this).css("top"));
+                                $(newElement).css("left",$(this).css("left"));
+                                $(elem).remove();
+                                setTimeout(function() { setBack($(newElement), o.images, o.imagedir) }, o.delay);
+                            });
+                            i++;
+                            if (i == backgrounds.length)
+                            {
+                                i = 0;
+                                preCache = false;
+                            }
+                            if (preCache)
+                            {
+                                var cacheImage = document.createElement('img');
+                                cacheImage.src = imagedir + backgrounds[i];
+                                cache.push(cacheImage);
+                            }
+                        }
+                    }
+                });
+            })(jQuery);
+
+        $(".home").bgrotate({ delay: 1000, imagedir: "http://www.diplo.co.uk/images/backgrounds/", images: ["pattern8-pattern-58a.png", "419.gif"] });
         </script>
     </head>
-    <script src="twitter.js"></script>
     <body>
+    <script src="twitter.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+    
+            $('#toggle-view li').click(function () {
+
+                var text = $(this).children('div.panel');
+
+                if (text.is(':hidden')) {
+                    text.slideDown('200');
+                    $(this).children('span').html('-');     
+                } else {
+                    text.slideUp('200');
+                    $(this).children('span').html('+');     
+                }
+                
+            });
+
+        }); 
+    </script>
+    <div class="wrapper">
         <div class="title">
-            <h1> Excellent! </h1>
-            <p> Now you can use the form below to query the social web. </p>
-            <p> This form works best with premier league teams, but feel free to search outside of the suggestions. </p>
+            <h2><span>Now you can use the form below to query the social web. This form works best with teams in the premier league, but feel free to set the criteria to whatever you wish.</span></h2>
         </div>
+        <ul id="toggle-view">
+            <li>
+                <h2>First time using this form?</h2>
+                <span>+</span>
+                <div class="panel">
+                    <p>Twitter profile: This field is for specifying the twitter profile that you want to return tweets for. For example, 'MCFC' will return tweets from the offical Manchester city twitter account.<br>Key Words: This field is for specifying a key word you want the tweets returned to contain. For example, 'ref' will return all tweets that contain the word ref.<br>Count: This field is for specifying how many tweets you wish to return, note that the maximum is 300.<br>Date: This field is for specifying the date from which to get tweets from. For example, '2015-11-11' will only return tweets after the 11th of novemeber 2015.<br>Distance: This field is for specifying the distance from point in which to eturn tweets. For example, 100km will return tweets from a 100km radius of location, note that if you have entered a premier league teams twitter profile this point is set to the teams stadium.</p>
+                </div>
+            </li>
+        </ul>
             <!-- Form for the user input for querying the social web -->
             <form action="" method="post" class="form"> 
-                <h1>Twitter Form for </h1>
+                <h1>Twitter Form</h1>
                 <label>
                     <span>Twitter Profile :</span>
                     <input id="profile" type="text" list="suggestions"placeholder="Example: MCFC" />
@@ -69,7 +153,7 @@
 
                 <label>
                     <span>Count :</span>
-                    <input id="count" type="text" placeholder="Example: 100" min="1" max="100"/>
+                    <input id="count" type="text" placeholder="Example: 100" min="1" max="300"/>
                 </label> 
 
                 <label>
@@ -88,5 +172,7 @@
                 </label>    
             </form>
             <div id='myform_errorloc' class='error_strings'></div>
+            <img src="/images/ajax-loader.gif" id="img" style="display:none"/ >
+        </div>
     </body>
 </html>
