--- a/app/public/index.html
+++ b/app/public/index.html
@@ -1,64 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
-<html class="home">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Home</title>
-    <link rel='stylesheet' type="text/css" href='/stylesheets/style.css' />
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-</head>
-<body>
-    <script type="text/javascript">
-        //Array of background images
-        var images = new Array('/images/Etihad-Stadium.jpg', '/images/emirates-stadium.jpg', '/images/Wembley.jpg', '/images/Toure.jpg', '/images/Ozil.jpg', '/images/Hazard.jpg', '/images/Aguero.jpg', '/images/Klopp.jpg', '/images/Rooney.jpg', '/images/Spurs.jpg', '/images/Vardy.jpg' ),
-            nextimage = 0;
+<html class="home" lang="en">
+<html>
+    <head>
+        <title>Home</title>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <link rel='stylesheet' type="text/css" href='/stylesheets/style.css' />
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script>
+            //Array of background images
+            var images = new Array('/images/Etihad-Stadium.jpg', '/images/emirates-stadium.jpg', '/images/Wembley.jpg', '/images/Toure.jpg', '/images/Ozil.jpg', '/images/Hazard.jpg', '/images/Aguero.jpg', '/images/Klopp.jpg', '/images/Rooney.jpg', '/images/Spurs.jpg', '/images/Vardy.jpg' ),
+                nextimage = 0;
 
-        doSlideshow();
+            doSlideshow();
 
-        //Function that handles the background images slideshow
-        function doSlideshow(){
-            if (nextimage >= images.length) {nextimage=0;}
-            $('.home')
-            .css('background-image','url("'+images[nextimage++]+'")')
-            .fadeIn("slow", "swing", function(){
-                setTimeout(doSlideshow,20000);
-            });
-        }
-        function adjust_textarea(h) {
-            h.style.height = "20px";
-            h.style.height = (h.scrollHeight)+"px";
-        }
-        function validateForm(){
-            var x = document.forms["login"]["username"].value;
-            if (x==null || x==""){
-                alert("Please enter your username.")
-                return false;
+            //Function that handles the background images slideshow
+            function doSlideshow(){
+                if (nextimage >= images.length) {nextimage=0;}
+                $('.home')
+                .css('background-image','url("'+images[nextimage++]+'")')
+                .fadeIn("slow", "swing", function(){
+                    setTimeout(doSlideshow,20000);
+                });
             }
-        }
-    </script>
-    <div class="wrapper">
-        <div class="title">
-            <h1><span>Welcome!<span></h1>
-            <h2><span>This is "We Have To Choose A Group Name?" Intelligent Web assignment. This Web application will allow you to query the social web, to track discussions about football. Please log in below to get started!<span></h2>
+            function validateForm(){
+                var x = document.forms["login"]["username"].value;
+                if (x==null || x==""){
+                    alert("Please enter your username.")
+                    return false;
+                }
+            }
+        </script>
+    </head>
+    <body>
+        <div class="index-wrapper">
+            <div class="title">
+                <h1><span>Welcome!<span></h1>
+                <h2><span>This is "We Have To Choose A Group Name?" Intelligent Web assignment. This Web application will allow you to query the social web, to track discussions about football. Please log in below to get started!<span></h2>
+            </div>
+            <section class="loginform cf">
+                <form name="login" method="post" action="/login" accept-charset="utf-8">
+                    <ul>
+                        <li>
+                            <label for="username">Username:</label>
+                            <input type="text" name="username" placeholder="tj" required>
+                        </li>
+                        <li>
+                            <label for="password">Password:</label>
+                            <input type="password" name="password" placeholder="foobar" required>
+                        </li>
+                        <li>
+                            <input type="submit" value="Login">
+                        </li>
+                    </ul>
+                </form>
+            </section>
         </div>
-        <section class="loginform cf">
-            <form name="login" method="post" action="/login" accept-charset="utf-8">
-                <ul>
-                    <li>
-                        <label for="username">Username:</label>
-                        <input type="text" name="username" placeholder="tj" required>
-                    </li>
-                    <li>
-                        <label for="password">Password:</label>
-                        <input type="password" name="password" placeholder="foobar" required>
-                    </li>
-                    <li>
-                        <input type="submit" value="Login">
-                    </li>
-                </ul>
-            </form>
-        </section>
-    </div>
-</body>
+    </body>
 </html>
